version/0.73/_sources/examples/gallery_examples/00-mapdl-examples/geometry.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/geometry.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_geometry.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_geometry.py:


.. _ref_3d_bracket_example:

Plotting and Mesh Access
------------------------

PyMAPDL can load basic IGES geometry for analysis.

This example demonstrates loading basic geometry into MAPDL for
analysis and demonstrates how to use the built-in Python specific
plotting functionality.

This example also demonstrates some of the more advanced features of
PyMAPDL including direct mesh access through VTK.

.. GENERATED FROM PYTHON SOURCE LINES 39-50

.. code-block:: Python



    import numpy as np

    from ansys.mapdl import core as pymapdl
    from ansys.mapdl.core import examples
    from ansys.mapdl.core.plotting import MapdlTheme

    mapdl = pymapdl.launch_mapdl()









.. GENERATED FROM PYTHON SOURCE LINES 52-56

Load Geometry
~~~~~~~~~~~~~
Here we download a simple example bracket IGES file and load it into
MAPDL.  Since ``igesin`` must be in the AUX15 process

.. GENERATED FROM PYTHON SOURCE LINES 56-66

.. code-block:: Python


    # note that this method just returns a file path
    bracket_file = examples.download_bracket()

    # load the bracket and then print out the geometry
    mapdl.aux15()
    mapdl.igesin(bracket_file)
    print(mapdl.geometry)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    MAPDL Selected Geometry
    Keypoints:  188
    Lines:      185
    Areas:      73
    Volumes:    1





.. GENERATED FROM PYTHON SOURCE LINES 67-75

Plotting
~~~~~~~~
PyMAPDL uses VTK and pyvista as a plotting backend to enable
remotable (with 2021R1 and newer) interactive plotting.  The common
plotting methods (``kplot``, ``lplot``, ``aplot``, ``eplot``, etc.)
all have compatible commands that use the
:class:`ansys.mapdl.core.plotting.visualizer.MapdlPlotter` class.  You can
configure this method with a variety of keyword arguments.  For example:

.. GENERATED FROM PYTHON SOURCE LINES 75-88

.. code-block:: Python


    mapdl.lplot(
        show_line_numbering=False,
        background="k",
        line_width=3,
        color="w",
        show_axes=False,
        show_bounds=True,
        title="",
        cpos="xz",
    )





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_001.png
   :alt: geometry
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-92

You can also configure a theme to enable consistent plotting across
multiple plots.  These theme parameters override any unset keyword
arguments.  For example:

.. GENERATED FROM PYTHON SOURCE LINES 92-102

.. code-block:: Python


    my_theme = MapdlTheme()
    my_theme.background = "white"
    my_theme.cmap = "jet"  # colormap
    my_theme.axes.show = False
    my_theme.show_scalar_bar = False

    mapdl.aplot(theme=my_theme, quality=8)





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_002.png
   :alt: geometry
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 103-108

Accessesing Element and Nodes Pythonically
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
PyMAPDL also supports element and nodal plotting using ``eplot`` and
``nplot``.  First, mesh the bracket using SOLID187 elements.  These
are well suited to this geometry and the static structural analyses.

.. GENERATED FROM PYTHON SOURCE LINES 108-119

.. code-block:: Python


    # set the preprocessor, element type and size, and mesh the volume
    mapdl.prep7()
    mapdl.et(1, "SOLID187")
    mapdl.esize(0.075)
    mapdl.vmesh("all")

    # print out the mesh characteristics
    print(mapdl.mesh)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ANSYS Mesh
      Number of Nodes:              50565
      Number of Elements:           32115
      Number of Element Types:      1
      Number of Node Components:    0
      Number of Element Components: 0





.. GENERATED FROM PYTHON SOURCE LINES 120-122

You can access the underlying finite element mesh as a VTK grid
through the ``mesh.grid`` attribute.

.. GENERATED FROM PYTHON SOURCE LINES 122-127

.. code-block:: Python


    grid = mapdl.mesh.grid
    grid







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><style>/* PyVista HTML repr stylesheet.
     * Uses pv- prefix to avoid conflicts with other libraries.
     */

    :root {
      --pv-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --pv-border-color: var(--jp-border-color2, #e0e0e0);
      --pv-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --pv-background-color-row-even: var(--jp-layout-color1, #f5f5f5);
      --pv-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
      --pv-badge-active: #1b5e20;
      --pv-badge-normals: #0d47a1;
      --pv-badge-vectors: #00695c;
      --pv-badge-tcoords: #4527a0;
    }

    body[data-jp-theme-light="false"] {
      --pv-font-color0: var(--jp-content-font-color0, rgba(255, 255, 255, 1));
      --pv-font-color2: var(--jp-content-font-color2, rgba(255, 255, 255, 0.54));
      --pv-font-color3: var(--jp-content-font-color3, rgba(255, 255, 255, 0.38));
      --pv-border-color: var(--jp-border-color2, #424242);
      --pv-disabled-color: var(--jp-layout-color3, #616161);
      --pv-background-color-row-even: var(--jp-layout-color1, #1a1a1a);
      --pv-background-color-row-odd: var(--jp-layout-color2, #252525);
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    html[theme="dark"],
    html[data-theme="dark"],
    body[data-theme="dark"],
    body.vscode-dark {
      --pv-font-color0: rgba(255, 255, 255, 1);
      --pv-font-color2: rgba(255, 255, 255, 0.54);
      --pv-font-color3: rgba(255, 255, 255, 0.38);
      --pv-border-color: #424242;
      --pv-disabled-color: #616161;
      --pv-background-color-row-even: #1a1a1a;
      --pv-background-color-row-odd: #252525;
      --pv-badge-active: #66bb6a;
      --pv-badge-normals: #64b5f6;
      --pv-badge-vectors: #4db6ac;
      --pv-badge-tcoords: #b39ddb;
    }

    /* OS-level dark mode fallback: applies when no explicit data-theme is set */
    @media (prefers-color-scheme: dark) {
      html:not([data-theme="light"]) {
        --pv-font-color0: rgba(255, 255, 255, 1);
        --pv-font-color2: rgba(255, 255, 255, 0.54);
        --pv-font-color3: rgba(255, 255, 255, 0.38);
        --pv-border-color: #424242;
        --pv-disabled-color: #616161;
        --pv-background-color-row-even: #1a1a1a;
        --pv-background-color-row-odd: #252525;
        --pv-badge-active: #66bb6a;
        --pv-badge-normals: #64b5f6;
        --pv-badge-vectors: #4db6ac;
        --pv-badge-tcoords: #b39ddb;
      }
    }

    .pv-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
      line-height: 1.6;
      padding-bottom: 4px;
      font-family: var(--jp-ui-font-family, sans-serif);
      font-size: var(--jp-ui-font-size1, 13px);
      color: var(--pv-font-color0);
    }

    .pv-text-repr-fallback {
      display: none;
    }

    /* Header */
    .pv-header {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 6px;
      padding-bottom: 6px;
      border-bottom: solid 1px var(--pv-border-color);
      margin-bottom: 4px;
    }

    .pv-header-text {
      display: flex;
      flex-direction: column;
      gap: 1px;
      min-width: 0;
      flex: 1;
    }

    .pv-obj-type {
      font-weight: 600;
      color: var(--pv-font-color0);
    }

    .pv-header-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 2px 7px;
      border-radius: 3px;
      color: var(--pv-font-color2);
      border: 1px solid var(--pv-border-color);
      white-space: nowrap;
    }

    /* Metadata (always-visible key-value rows) */
    .pv-metadata {
      margin: 4px 0 6px 0;
      font-size: 0.92em;
      line-height: 1.5;
    }

    .pv-meta-row {
      display: flex;
      flex-wrap: wrap;
      gap: 1px 14px;
      padding: 1px 0;
    }

    .pv-meta-row-label {
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
      min-width: 60px;
    }

    .pv-meta-entry {
      white-space: nowrap;
    }

    /* Copy-to-clipboard button */
    .pv-copy-btn {
      display: inline-block;
      cursor: pointer;
      opacity: 0.5;
      font-size: 0.85em;
      padding: 0 3px;
      vertical-align: middle;
      transition: opacity 0.15s;
      user-select: none;
      border: none;
      background: none;
      color: var(--pv-font-color3);
    }

    .pv-copy-btn:hover {
      opacity: 1;
      color: var(--pv-font-color0);
    }

    .pv-meta-label {
      color: var(--pv-font-color3);
      font-weight: 400;
      padding-right: 2px;
    }

    /* Sections grid */
    .pv-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto auto 1fr 20px 20px;
      margin-block-start: 0;
      margin-block-end: 0;
      list-style: none;
    }

    .pv-section-item {
      display: contents;
    }

    /* Hidden checkbox for expand/collapse */
    .pv-section-item > input {
      display: block;
      opacity: 0;
      height: 0;
      margin: 0;
    }

    .pv-section-item > input + label {
      color: var(--pv-disabled-color);
    }

    .pv-section-item > input:enabled + label {
      cursor: pointer;
      color: var(--pv-font-color2);
    }

    .pv-section-item > input:enabled + label:hover {
      color: var(--pv-font-color0);
    }

    /* Section summary (left column label) */
    .pv-section-summary {
      grid-column: 1;
      color: var(--pv-font-color2);
      font-weight: 500;
      white-space: nowrap;
    }

    .pv-section-summary > span {
      display: inline-block;
      padding-left: 0.3em;
    }

    .pv-section-summary-in:disabled + label {
      color: var(--pv-font-color2);
    }

    /* Expand/collapse arrows */
    .pv-section-summary-in + label:before {
      display: inline-block;
      content: "\25b6";
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .pv-section-summary-in:disabled + label:before {
      color: var(--pv-disabled-color);
    }

    .pv-section-summary-in:checked + label:before {
      content: "\25bc";
    }

    .pv-section-summary-in:checked + label > span {
      display: none;
    }

    .pv-section-summary,
    .pv-section-inline-details {
      padding-top: 4px;
    }

    .pv-section-inline-details {
      grid-column: 2 / -1;
    }

    .pv-section-details {
      grid-column: 1 / -1;
      margin-top: 4px;
      margin-bottom: 5px;
    }

    .pv-section-summary-in ~ .pv-section-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-inline-details {
      display: none;
    }

    .pv-section-summary-in:checked ~ .pv-section-details {
      display: block;
    }

    .pv-section-summary-in:checked ~ .pv-section-details:has(.pv-var-list) {
      display: contents;
    }

    /* Variable (array) list */
    .pv-var-list,
    .pv-var-item {
      display: contents;
    }

    .pv-var-item > div,
    .pv-var-item label,
    .pv-var-item > .pv-var-name span {
      background-color: var(--pv-background-color-row-even);
      border-color: var(--pv-background-color-row-odd);
      margin-bottom: 0;
      padding-top: 2px;
    }

    .pv-var-list > li:nth-child(odd) > div,
    .pv-var-list > li:nth-child(odd) > label,
    .pv-var-list > li:nth-child(odd) > .pv-var-name span {
      background-color: var(--pv-background-color-row-odd);
      border-color: var(--pv-background-color-row-even);
    }

    .pv-var-name {
      grid-column: 1;
    }

    .pv-var-dims {
      grid-column: 2;
    }

    .pv-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--pv-font-color2);
    }

    .pv-var-range {
      grid-column: 4;
      color: var(--pv-font-color3);
      font-size: 0.92em;
    }

    .pv-var-badges {
      grid-column: 5;
      padding-left: 8px;
    }

    .pv-var-name,
    .pv-var-dims,
    .pv-var-dtype,
    .pv-var-range {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .pv-var-name:hover,
    .pv-var-dims:hover,
    .pv-var-dtype:hover,
    .pv-var-range:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .pv-var-name span {
      padding-left: 25px !important;
    }

    .pv-var-name-active span {
      font-weight: 600;
    }

    /* Badges */
    .pv-badge {
      display: inline-block;
      font-size: 0.75em;
      font-weight: 600;
      padding: 1px 5px;
      border-radius: 3px;
      vertical-align: middle;
      line-height: 1.4;
    }

    .pv-badge-active {
      color: var(--pv-badge-active);
      border: 1px solid var(--pv-badge-active);
    }

    .pv-badge-normals {
      color: var(--pv-badge-normals);
      border: 1px solid var(--pv-badge-normals);
    }

    .pv-badge-vectors {
      color: var(--pv-badge-vectors);
      border: 1px solid var(--pv-badge-vectors);
    }

    .pv-badge-tcoords {
      color: var(--pv-badge-tcoords);
      border: 1px solid var(--pv-badge-tcoords);
    }

    /* Logo and Icons */
    .pv-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-logo svg {
      width: 28px;
      height: 28px;
    }

    .pv-brand-logo {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    .pv-brand-logo svg {
      height: 20px;
      width: auto;
    }

    /* Children list (MultiBlock / PartitionedDataSet) */
    .pv-children-list {
      padding-left: 25px !important;
      list-style: none;
    }

    .pv-children-list li {
      padding: 1px 0;
    }

    .pv-child-name {
      font-weight: 500;
    }

    .pv-child-type {
      color: var(--pv-font-color2);
      font-style: italic;
    }

    .pv-child-type:before {
      content: "\00b7";
      padding: 0 6px;
      font-style: normal;
    }

    .pv-child-detail {
      color: var(--pv-font-color3);
      font-size: 0.9em;
    }

    .pv-child-detail:not(:empty):before {
      content: "\00b7";
      padding: 0 6px;
    }
    </style><pre class='pv-text-repr-fallback'>UnstructuredGrid (0x7fa1c849d720)
      N Cells:    32115
      N Points:   50565
      X Bounds:   -1.181e+00, 1.181e+00
      Y Bounds:   -2.362e-01, 0.000e+00
      Z Bounds:   -2.394e+00, 2.509e+00
      N Arrays:   10</pre><div class='pv-wrap' style='display:none'><div class='pv-header'><span class='pv-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
      <defs>
        <linearGradient id="pv-ug-g1" x1="0" y1="0" x2="1" y2="1">
          <stop offset="0%" stop-color="#ffd040"/>
          <stop offset="100%" stop-color="#376fa0"/>
        </linearGradient>
      </defs>
      <polygon points="3,10 8,5 14,7 13,13 6,14" fill="#376fa0" opacity="0.9"/>
      <polygon points="14,7 22,4 20,12" fill="url(#pv-ug-g1)" opacity="0.85"/>
      <polygon points="22,4 29,9 27,17 20,12" fill="#1a4a70" opacity="0.85"/>
      <polygon points="13,13 20,12 16,20" fill="#ffd040" opacity="0.8"/>
      <polygon points="6,14 13,13 16,20 10,24 4,20" fill="#376fa0" opacity="0.8"/>
      <polygon points="16,20 10,24 18,28" fill="#1a4a70" opacity="0.85"/>
      <polygon points="20,12 27,17 26,25 18,28 16,20" fill="url(#pv-ug-g1)" opacity="0.8"/>
      <g stroke="rgba(255,255,255,0.6)" stroke-width="0.5" fill="none">
        <polygon points="3,10 8,5 14,7 13,13 6,14"/>
        <polygon points="14,7 22,4 20,12"/>
        <polygon points="22,4 29,9 27,17 20,12"/>
        <line x1="13" y1="13" x2="20" y2="12"/>
        <line x1="13" y1="13" x2="16" y2="20"/>
        <line x1="20" y1="12" x2="16" y2="20"/>
        <polygon points="6,14 13,13 16,20 10,24 4,20"/>
        <line x1="16" y1="20" x2="10" y2="24"/>
        <line x1="10" y1="24" x2="18" y2="28"/>
        <line x1="16" y1="20" x2="18" y2="28"/>
        <polygon points="20,12 27,17 26,25 18,28 16,20"/>
      </g>
      <g fill="rgba(255,255,255,0.8)">
        <circle cx="3" cy="10" r="0.9"/>
        <circle cx="8" cy="5" r="0.9"/>
        <circle cx="14" cy="7" r="0.9"/>
        <circle cx="22" cy="4" r="0.9"/>
        <circle cx="29" cy="9" r="0.9"/>
        <circle cx="13" cy="13" r="0.9"/>
        <circle cx="20" cy="12" r="0.9"/>
        <circle cx="6" cy="14" r="0.9"/>
        <circle cx="27" cy="17" r="0.9"/>
        <circle cx="16" cy="20" r="0.9"/>
        <circle cx="4" cy="20" r="0.9"/>
        <circle cx="10" cy="24" r="0.9"/>
        <circle cx="26" cy="25" r="0.9"/>
        <circle cx="18" cy="28" r="0.9"/>
      </g>
    </svg>
    </span><div class='pv-header-text'><div class='pv-obj-type'>UnstructuredGrid <span class='pv-header-badge'>50,565 points</span> <span class='pv-header-badge'>32,115 cells</span> <span class='pv-header-badge'>6.1 MiB</span></div></div><span class='pv-brand-logo'><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 24">
      <text x="0" y="18" font-family="system-ui,-apple-system,sans-serif" font-size="18" font-weight="700" font-style="italic" letter-spacing="-0.5">
        <tspan fill="#3776AB" opacity="0.7">P</tspan><tspan fill="#FFD43B" opacity="0.7">y</tspan><tspan fill="#008c9e">Vista</tspan>
      </text>
    </svg>
    </span></div><div class='pv-metadata'><div class='pv-meta-row pv-copyable'><span class='pv-meta-row-label'>Bounds</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='(-1.18110472440473, 1.1811000000047203, -0.23622047244094008, 0.0, -2.3944082311032413, 2.5086915613430114)' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button><span class='pv-meta-entry'><span class='pv-meta-label'>X</span> [-1.181e+00, 1.181e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Y</span> [-2.362e-01, 0.000e+00]</span><span class='pv-meta-entry'><span class='pv-meta-label'>Z</span> [-2.394e+00, 2.509e+00]</span></div></div><ul class='pv-sections'><li class='pv-section-item'><input id='section-e86b478f-fdd9-475b-bd6b-b8ab27b7ffb1' class='pv-section-summary-in' type='checkbox' checked /><label for='section-e86b478f-fdd9-475b-bd6b-b8ab27b7ffb1' class='pv-section-summary' title='Expand/collapse section'>Point Data: <span>(4)</span></label><div class='pv-section-inline-details'>ansys_node_num <span class='pv-badge pv-badge-active'>active</span></div><div class='pv-section-details'><ul class='pv-var-list'><li class='pv-var-item'><div class='pv-var-name pv-var-name-active'><span>ansys_node_num</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_node_num' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.000e+00, 5.056e+04]</div><div class='pv-var-badges'> <span class='pv-badge pv-badge-active'>active</span></div></li><li class='pv-var-item'><div class='pv-var-name'><span>vtkOriginalPointIds</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='vtkOriginalPointIds' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int64</div><div class='pv-var-range'>[0.000e+00, 5.056e+04]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>origid</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='origid' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int64</div><div class='pv-var-range'>[0.000e+00, 5.056e+04]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>VTKorigID</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='VTKorigID' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int64</div><div class='pv-var-range'>[0.000e+00, 5.056e+04]</div><div class='pv-var-badges'></div></li></ul></div></li><li class='pv-section-item'><input id='section-ad58defe-bc66-46ab-a918-164053def6b0' class='pv-section-summary-in' type='checkbox' checked /><label for='section-ad58defe-bc66-46ab-a918-164053def6b0' class='pv-section-summary' title='Expand/collapse section'>Cell Data: <span>(6)</span></label><div class='pv-section-inline-details'></div><div class='pv-section-details'><ul class='pv-var-list'><li class='pv-var-item'><div class='pv-var-name'><span>ansys_elem_num</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_elem_num' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.000e+00, 3.212e+04]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>ansys_real_constant</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_real_constant' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.000e+00, 1.000e+00]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>ansys_material_type</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_material_type' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.000e+00, 1.000e+00]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>ansys_etype</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_etype' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.000e+00, 1.000e+00]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>ansys_elem_type_num</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='ansys_elem_type_num' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int32</div><div class='pv-var-range'>[1.870e+02, 1.870e+02]</div><div class='pv-var-badges'></div></li><li class='pv-var-item'><div class='pv-var-name'><span>vtkOriginalCellIds</span><button class='pv-copy-btn' title='Copy to clipboard' data-copy='vtkOriginalCellIds' onclick="navigator.clipboard.writeText(this.dataset.copy)">⧉</button></div><div class='pv-var-dims'>scalar</div><div class='pv-var-dtype'>int64</div><div class='pv-var-range'>[0.000e+00, 3.211e+04]</div><div class='pv-var-badges'></div></li></ul></div></li></ul></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 128-132

This UnstructuredGrid contains a powerful API, including the ability
to access the nodes, elements, original node numbers, all with the
ability to plot the mesh and add new attributes and data to the
grid.

.. GENERATED FROM PYTHON SOURCE LINES 132-136

.. code-block:: Python


    grid.points  # same as mapdl.mesh.nodes






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    pyvista_ndarray([[-2.03111884e-01, -5.87401575e-02,  4.44426114e-04],
                     [-2.03111884e-01,  0.00000000e+00,  4.44426114e-04],
                     [-2.03111884e-01, -2.93700787e-02,  4.44426114e-04],
                     ...,
                     [-4.51418296e-01, -1.54326811e-01, -6.17372990e-01],
                     [ 4.95126147e-01, -8.12234933e-02,  1.09901235e+00],
                     [-3.92050102e-01, -1.86903380e-01, -2.85033703e-01]],
                    shape=(50565, 3))



.. GENERATED FROM PYTHON SOURCE LINES 137-138

cell representation in VTK format

.. GENERATED FROM PYTHON SOURCE LINES 138-142

.. code-block:: Python


    grid.cells






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    array([   10, 15180, 15181, ..., 21973, 48857, 48856], shape=(353265,))



.. GENERATED FROM PYTHON SOURCE LINES 143-144

Obtain node numbers of the grid

.. GENERATED FROM PYTHON SOURCE LINES 144-148

.. code-block:: Python


    grid.point_data["ansys_node_num"]






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    pyvista_ndarray([    1,     2,     3, ..., 50563, 50564, 50565],
                    shape=(50565,), dtype=int32)



.. GENERATED FROM PYTHON SOURCE LINES 149-150

Save arbitrary data to the grid

.. GENERATED FROM PYTHON SOURCE LINES 150-156

.. code-block:: Python


    # must be sized to the number of points
    grid.point_data["my_data"] = np.arange(grid.n_points)
    grid.point_data






.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    pyvista DataSetAttributes
    Association     : POINT
    Active Scalars  : ansys_node_num
    Active Vectors  : None
    Active Texture  : None
    Active Normals  : None
    Contains arrays :
        ansys_node_num          int32      (50565,)             SCALARS
        vtkOriginalPointIds     int64      (50565,)
        origid                  int64      (50565,)
        VTKorigID               int64      (50565,)
        my_data                 int64      (50565,)



.. GENERATED FROM PYTHON SOURCE LINES 157-159

Plot this mesh with scalars of your choosing.  You can apply the
same MapdlTheme when plotting as it's compatible with the grid plotter.

.. GENERATED FROM PYTHON SOURCE LINES 159-173

.. code-block:: Python


    # make interesting scalars
    scalars = grid.points[:, 2]  # z coordinates

    sbar_kwargs = {"color": "black", "title": "Z Coord"}
    grid.plot(
        scalars=scalars,
        show_scalar_bar=True,
        scalar_bar_args=sbar_kwargs,
        show_edges=True,
        theme=my_theme,
    )





.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_003.png
   :alt: geometry
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_geometry_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 174-182

This grid can be also saved to disk in the compact cross-platform VTK
format and loaded again with ``pyvista`` or ParaView.

..code:: pycon

    >>> grid.save('my_mesh.vtk')
    >>> import pyvista
    >>> imported_mesh = pyvista.read('my_mesh.vtk')

.. GENERATED FROM PYTHON SOURCE LINES 184-187

Stop mapdl
~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 187-188

.. code-block:: Python

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 13.358 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_geometry.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: geometry.ipynb <geometry.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: geometry.py <geometry.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: geometry.zip <geometry.zip>`
